fixed blogs and background and removed scrollbar

--- a/base.css
+++ b/base.css
@@ -9,15 +9,25 @@
     --border: var(--accent-strong);
 }
 
-@font-face { font-family: IosevkaSS14; src: url('IosevkaSS14.ttf'); } 
+@font-face { font-family: IosevkaSS14; src: url('assets/IosevkaSS14.ttf'); } 
 
-html {
+/* hide page scrollbar */
+html { scrollbar-width: none; } /* Firefox */
+body { -ms-overflow-style: none; } /* IE and Edge */
+body::-webkit-scrollbar, body::-webkit-scrollbar-button { display: none; } /* Chrome */
+/* end hide page scrollbar */
+
+.bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background: linear-gradient(var(--background)), url(assets/frutiger_metro.png);
-    background-position: 50% 50%;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    z-index: -1;
 }
 
 body {
